src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__thermo_6x6__check_thermo_6x6_1_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/thermo_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: Thermo
  cells:
    - row: 0
      col: 0
  values:
    - 1
  areas:
    - Thermo: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 0
      col: 1
  values:
    - 2
  areas:
    - Thermo: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 0
      col: 2
  values:
    - 3
  areas:
    - Thermo: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 0
      col: 3
  values:
    - 4
  areas:
    - Thermo: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 0
      col: 4
  values:
    - 5
  areas:
    - Thermo: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 6
  areas:
    - Row: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 1
  areas:
    - Column: 5
    - Region: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 4
  areas:
    - Row: 2
    - Column: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 5
  areas:
    - Column: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 1
      col: 4
  values:
    - 2
  areas:
    - Thermo: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 3
  areas:
    - Region: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 2
      col: 4
  values:
    - 3
  areas:
    - Thermo: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 3
      col: 4
  values:
    - 6
  areas:
    - Thermo: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 4
  values:
    - 1
  areas:
    - Column: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Thermo
  cells:
    - row: 3
      col: 0
  values:
    - 2
  areas:
    - Thermo: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 1
  areas:
    - Row: 3
    - Column: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 6
  areas:
    - Row: 5
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 2
  areas:
    - Region: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 2
  values:
    - 4
  areas:
    - Row: 3
    - Column: 2
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 3
  areas:
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 5
  areas:
    - Row: 5
    - Region: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 3
  areas:
    - Row: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 5
  areas:
    - Row: 4
    - Column: 2
    - Region: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 6
  areas:
    - Column: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 1
  areas:
    - Row: 5
    - Column: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 6
  areas:
    - Row: 1
    - Column: 2
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 6
  areas:
    - Row: 2
    - Column: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 4
  areas:
    - Row: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 2
  areas:
    - Row: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 5
  areas:
    - Row: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 1
  areas:
    - Row: 2
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
