src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__thermo_6x6__check_thermo_6x6_7_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/thermo_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  grid: ~
  candidates:
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 3
    - 4
    - 5
    - 6
  areas:
    - Thermo: 0
  affectedCells:
    - row: 2
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 4
    - 5
    - 6
  areas:
    - Thermo: 0
  affectedCells:
    - row: 2
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 5
    - 6
  areas:
    - Thermo: 0
  affectedCells:
    - row: 1
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
    - 6
  areas:
    - Thermo: 0
  affectedCells:
    - row: 1
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
    - 4
  areas:
    - Thermo: 0
  affectedCells:
    - row: 1
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 4
    - 5
    - 6
  areas:
    - Thermo: 1
  affectedCells:
    - row: 3
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 5
    - 6
  areas:
    - Thermo: 1
  affectedCells:
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 6
  areas:
    - Thermo: 1
  affectedCells:
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
  areas:
    - Thermo: 1
  affectedCells:
    - row: 3
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 4
    - 5
    - 6
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 5
    - 6
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 6
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 3
    - 4
    - 5
    - 6
  areas:
    - Thermo: 3
  affectedCells:
    - row: 5
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 4
    - 5
    - 6
  areas:
    - Thermo: 3
  affectedCells:
    - row: 5
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 5
    - 6
  areas:
    - Thermo: 3
  affectedCells:
    - row: 5
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
    - 6
  areas:
    - Thermo: 3
  affectedCells:
    - row: 5
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
    - 4
  areas:
    - Thermo: 3
  affectedCells:
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 2
  values:
    - 6
  areas:
    - Column: 2
  affectedCells:
    - row: 0
      col: 0
    - row: 0
      col: 1
    - row: 0
      col: 3
    - row: 0
      col: 4
    - row: 0
      col: 5
    - row: 1
      col: 0
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 0
  values:
    - 6
  areas:
    - Region: 2
  affectedCells:
    - row: 2
      col: 3
    - row: 2
      col: 4
    - row: 2
      col: 5
    - row: 0
      col: 0
    - row: 1
      col: 0
    - row: 4
      col: 0
    - row: 5
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 4
  values:
    - 1
  areas:
    - Region: 5
  affectedCells:
    - row: 4
      col: 0
    - row: 0
      col: 4
    - row: 2
      col: 4
    - row: 3
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 5
  values:
    - 6
  areas:
    - Region: 5
  affectedCells:
    - row: 4
      col: 0
    - row: 4
      col: 1
    - row: 0
      col: 5
    - row: 1
      col: 5
    - row: 2
      col: 5
    - row: 3
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 4
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 5
  areas:
    - Thermo: 2
  affectedCells:
    - row: 4
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 4
  values:
    - 6
  areas:
    - Row: 1
  affectedCells:
    - row: 3
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 1
  values:
    - 6
  areas:
    - Row: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 2
  values:
    - 1
  areas:
    - Column: 2
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 2
  values:
    - 5
  areas:
    - Column: 2
  affectedCells:
    - row: 3
      col: 3
    - row: 3
      col: 4
    - row: 3
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 3
  values:
    - 6
  areas:
    - Column: 3
  affectedCells:
    - row: 3
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 5
  values:
    - 5
  areas:
    - Region: 5
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 1
    - row: 0
      col: 5
    - row: 1
      col: 5
    - row: 2
      col: 5
    - row: 3
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 2
  values:
    - 2
  areas:
    - Column: 2
  affectedCells:
    - row: 2
      col: 1
    - row: 2
      col: 3
    - row: 2
      col: 4
    - row: 2
      col: 5
    - row: 3
      col: 0
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 1
  values:
    - 4
  areas:
    - Region: 2
  affectedCells:
    - row: 3
      col: 4
    - row: 3
      col: 5
    - row: 0
      col: 1
    - row: 1
      col: 1
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 4
  values:
    - 4
  areas:
    - Region: 5
  affectedCells:
    - row: 5
      col: 0
    - row: 0
      col: 4
    - row: 2
      col: 4
    - row: 3
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 1
  areas: []
  affectedCells:
    - row: 2
      col: 3
    - row: 2
      col: 5
    - row: 0
      col: 1
    - row: 1
      col: 1
    - row: 3
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 5
  areas: []
  affectedCells:
    - row: 4
      col: 0
    - row: 0
      col: 1
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 0
  values:
    - 3
  areas: []
  affectedCells:
    - row: 3
      col: 4
    - row: 3
      col: 5
    - row: 0
      col: 0
    - row: 1
      col: 0
    - row: 4
      col: 0
    - row: 5
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 2
  areas: []
  affectedCells:
    - row: 3
      col: 5
    - row: 0
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 2
  areas: []
  affectedCells:
    - row: 5
      col: 3
    - row: 0
      col: 0
    - row: 1
      col: 0
    - row: 4
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 1
  areas: []
  affectedCells:
    - row: 0
      col: 5
    - row: 1
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 4
  areas: []
  affectedCells:
    - row: 4
      col: 2
    - row: 0
      col: 0
    - row: 1
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 3
  areas: []
  affectedCells:
    - row: 0
      col: 3
    - row: 2
      col: 3
    - row: 4
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 3
  areas: []
  affectedCells:
    - row: 1
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 2
  areas: []
  affectedCells:
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: ThermoCandidates
  cells: []
  values:
    - 4
  areas:
    - Thermo: 0
  affectedCells:
    - row: 1
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 4
  areas: []
  affectedCells:
    - row: 1
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 5
  areas: []
  affectedCells:
    - row: 1
      col: 0
    - row: 0
      col: 3
    - row: 2
      col: 3
    - row: 0
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 3
  areas: []
  affectedCells:
    - row: 0
      col: 1
    - row: 0
      col: 5
    - row: 2
      col: 4
    - row: 1
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 1
  areas: []
  affectedCells:
    - row: 0
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 4
  areas: []
  affectedCells:
    - row: 2
      col: 5
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 0
  values:
    - 5
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 2
  areas: []
  affectedCells:
    - row: 0
      col: 5
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 1
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 2
  areas: []
  affectedCells:
    - row: 1
      col: 1
    - row: 0
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 5
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 4
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
